// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography renders <h1> element if passed as 'as' 1`] = `
.c0 {
  font-family: Roboto;
  color: #5d5d5d;
}

<h1
  class="c0"
>
  font
</h1>
`;

exports[`Typography renders <p> tag if no 'as' 1`] = `
.c0 {
  font-family: Roboto;
  color: #5d5d5d;
}

<p
  class="c0"
>
  font
</p>
`;

exports[`Typography renders with custom font-size of 40px 1`] = `
.c0 {
  font-family: Roboto;
  color: #5d5d5d;
  font-size: 40px;
}

<p
  class="c0"
  font-size="40px"
>
  font
</p>
`;

exports[`Typography renders with red color 1`] = `
.c0 {
  font-family: Roboto;
  color: red;
}

<p
  class="c0"
  color="red"
>
  font
</p>
`;

exports[`Typography renders without pass children 1`] = `
.c0 {
  font-family: Roboto;
  color: #5d5d5d;
}

<p
  class="c0"
/>
`;
